--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AluraFlix AC J3</title>
+</head>
+<body>
+    <header>ALURAFLIX</header>
+    <h1>Através do aranhaverso já supera o primeiro filme?</h1>
+    <p>#home-aranha</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SS6ABPkfmBE?si=zXSGnWFtUQSfzVmD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
+</html>
