--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>ALURAFLIX</header>
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>Através do aranhaverso já supera o primeiro filme?</h1>
             <p>#home-aranha</p>
         </div>
