--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SS6ABPkfmBE?si=zXSGnWFtUQSfzVmD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <section class="categoria">
+    <section>
         <h2>Filmes e séries</h2>
     <div class="categoria-videos">
       <a href="https://www.youtube.com/watch?v=eVTXPUF4Oz4&list=PLBD5pRttJ7N0vCfh4NpEg7Vw47hfeCxuE&index=2">
         <img src="https://img.youtube.com/vi/IrQ3iLUKr0I/maxresdefault.jpg"/>
       </a>
-      <a href="https://www.youtube.com/watch?v=fg1gDSPVNSk">
-        <img src="https://img.youtube.com/vi/fg1gDSPVNSk/maxresdefault.jpg"/>
+      <a href="https://www.youtube.com/watch?v=ln-uUUsBscc">
+        <img src="https://img.youtube.com/vi/ln-uUUsBscc/maxresdefault.jpg"/>
       </a>          
       <a href="https://www.youtube.com/watch?v=2_BEUVQxBXE">
         <img src="https://img.youtube.com/vi/AIo0NFdc57Q/maxresdefault.jpg"/>
