--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a href="https://www.youtube.com/watch?v=eVTXPUF4Oz4&list=PLBD5pRttJ7N0vCfh4NpEg7Vw47hfeCxuE&index=2">
         <img src="https://img.youtube.com/vi/IrQ3iLUKr0I/maxresdefault.jpg"/>
       </a>
-      <a href="https://www.youtube.com/watch?v=ln-uUUsBscc">
-        <img src="https://img.youtube.com/vi/ln-uUUsBscc/maxresdefault.jpg"/>
+      <a href="https://www.youtube.com/watch?v=fg1gDSPVNSk">
+        <img src="https://img.youtube.com/vi/fg1gDSPVNSk/maxresdefault.jpg"/>
       </a>          
       <a href="https://www.youtube.com/watch?v=2_BEUVQxBXE">
         <img src="https://img.youtube.com/vi/AIo0NFdc57Q/maxresdefault.jpg"/>
