--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>ALURAFLIX</header>
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>Através do aranhaverso já supera o primeiro filme?</h1>
             <p>#home-aranha</p>
@@ -17,7 +17,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/SS6ABPkfmBE?si=zXSGnWFtUQSfzVmD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <section>
+    <section class="categoria">
         <h2>Filmes e séries</h2>
     <div class="categoria-videos">
       <a href="https://www.youtube.com/watch?v=eVTXPUF4Oz4&list=PLBD5pRttJ7N0vCfh4NpEg7Vw47hfeCxuE&index=2">
